removing micropub.rocks tests

--- a/content/post/2018-05-03-40216.md
+++ b/content/post/2018-05-03-40216.md
@@ -5,4 +5,4 @@ title: ''
 slug: '40216'
 category: social
 ---
-This post has **bold** and *italic* text.
+Ce post a du texte en **gras** et en *italique*.
