--- a/content/post/2018-05-03-39630.md
+++ b/content/post/2018-05-03-39630.md
@@ -4,5 +4,6 @@ date: '2018-05-03T11:00:30.020Z'
 title: ''
 slug: '39630'
 category: social
+draft: true
 ---
 Test Micropub de création d'un h-entry avec une requête JSON
