typo : tests micropub.rocks en cours

--- a/content/post/2018-05-03-30661.md
+++ b/content/post/2018-05-03-30661.md
@@ -12,4 +12,4 @@ Cette petite note a été générée par [Micropub Rocks!](https://micropub.rock
 > Le protocole Micropub est utilisé pour créer, mettre à jour et effacer les posts sur son propre domaine enn utilisant des clients tiers. Les apps Web et natives (iPhone, Android) peuvent utiliser Micropub pour poster et modifier des articles, petites notes, commentaires, likes, photos, événements ou tous les autres types de posts sur son propre site web. ([source W3C](https://www.w3.org/TR/micropub/#abstract-p-1))
 
 Les travaux démarrent avec l'intention de tester de nouvelles interfaces-utilisateurs pour faciliter la publication. 
-Le [détail de l'implémentation micropub sera mis à jour ici sur mon wiki de famille](http://ducamp.me/Xtof/micropub). 
+Les [détails de l'implémentation du point de terminaison micropub seront mis à jour ici sur mon wiki de famille](http://ducamp.me/Xtof/micropub). 
