edit : ajout commentaire
post instagram vers ownyourgram puis frontmatter à régler

--- a/content/post/2018-05-04-33592.md
+++ b/content/post/2018-05-04-33592.md
@@ -14,6 +14,9 @@ mf-photo:
 category: social
 persontags:
   - 'https://www.instagram.com/philip.glass'
+draft: true
 ---
 1 2 3 4 5 6 7 8 🎶
 Einstein à la plage.
+
+edit : Dans la lignée des précédents test micropub.rocks, aperçu d''un post d'une photo Instagram récupérée par le service [OwnYourGram](https://ownyourgram.com). L'image est bien récupérée par micropub dans le répertoire , mais travaux à prévoir pour régler le front-matter.
