Suppression Formats Output Netlify (à reparamétrer)
Posts de test avec Quill et indiebook club

--- a/content/post/2018-09-06-35479.md
+++ b/content/post/2018-09-06-35479.md
@@ -18,7 +18,7 @@ mf-read-of:
         - Jason R. Briggs
       uid:
         - 'isbn:9782212140880'
-tags: 100daysofcode python programmation
+tags: [100daysofcode, python, programmation]
 slug: '35479'
 category: social
 ---
