--- a/content/post/2018-09-07-19247.md
+++ b/content/post/2018-09-07-19247.md
@@ -4,7 +4,7 @@ date: '2018-09-07T05:20:47.928Z'
 title: ''
 mf-location:
   - 'geo:48.88589,2.35019;u=20'
-tags: micropub indieweb
+tags: [micropub, indieweb]
 slug: '19247'
 mf-photo:
   - >-
