ajout lien vers détail travaux micropub

--- a/content/post/2018-09-07-19247.md
+++ b/content/post/2018-09-07-19247.md
@@ -12,5 +12,11 @@ mf-photo:
 category: social
 ---
 14h00-18H00 Session découverte et implémentation #micropub #indieweb avec Glenn.
-Intention personnelle : poursuivre quelques travaux de configuration d&#39;un point de terminaison #micropub sur une motorisation gohugo.io
+
+Intention personnelle : poursuivre quelques travaux de configuration d&#39;un point de terminaison #micropub sur une motorisation [gohugo.io](https://gohugo.io). 
+
 Appelez-moi si ça vous dit de passer et venir nous aider.
+
+[Travaux en cours ici](http://ducamp.me/Xtof/micropub)
+
+
