lien vers recherches micropub

--- a/content/post/2018-09-07-19247.md
+++ b/content/post/2018-09-07-19247.md
@@ -17,6 +17,6 @@ Intention personnelle : poursuivre quelques travaux de configuration d&#39;un po
 
 Appelez-moi si ça vous dit de passer et venir nous aider.
 
-[Travaux en cours ici](http://ducamp.me/Xtof/micropub)
+Le détail de mes [recherches est documenté ici](http://ducamp.me/Xtof/micropub)
 
 
