--- a/content/post/2018-09-06-35479.md
+++ b/content/post/2018-09-06-35479.md
@@ -2,6 +2,7 @@
 layout: posts
 date: '2018-09-06T09:51:19.403Z'
 title: ''
+draft: true
 mf-summary:
   - >-
     Currently reading: Python pour les Kids by Jason R. Briggs, ISBN:
