--- a/content/post/2018-09-07-19247.md
+++ b/content/post/2018-09-07-19247.md
@@ -1,7 +1,7 @@
 ---
 layout: posts
 date: '2018-09-07T05:20:47.928Z'
-title: ''
+title: 'Découverte et implémentation #micropub #indieweb avec Glenux.'
 mf-location:
   - 'geo:48.88589,2.35019;u=20'
 tags: [micropub, indieweb]
@@ -11,12 +11,25 @@ mf-photo:
     https://christopheducamp.com/static/img/2018-09-19247/micropub-rocks-2018-09-07-07-11-40.png
 category: social
 ---
-14h00-18H00 Session découverte et implémentation #micropub #indieweb avec Glenn.
+## Quand et où 
 
-Intention personnelle : poursuivre quelques travaux de configuration d&#39;un point de terminaison #micropub sur une motorisation [gohugo.io](https://gohugo.io). 
+* Aujourd'hui, vendredi 7 septembre 2018 de 14h00 à 18H00 
+* à la maison (Paris 18) mf-location: 'geo:48.88589,2.35019;u=20'
 
-Appelez-moi si ça vous dit de passer et venir nous aider.
+## Agenda : 
 
-Le détail de mes [recherches est documenté ici](http://ducamp.me/Xtof/micropub)
+* Échanges ouverts avec [Glenux]](https://github.com/glenux) sur micropub et perspectives d'usages pour faciliter la publication web.
+* Travaux de configuration d&#39;un point de terminaison #micropub sur une motorisation [gohugo.io](https://gohugo.io). 
+* à compléter.
 
+L'ordre du jour reste ouvert à toutes propositions de recherche d'usages d'interfaces de publication basées sur l'API ouverte standard [micropub](https://indieweb.org/Micropub). 
+
+
+## Comment participer 
+
+Pour participer, appuyez sur le bouton en-dessous "Améliorez la page" pour m'envoyer une PR ou appelez-moi pour avoir le code de la porte.
+
+## Documentation : 
+
+À comppléter. Le détail de mes [premières expérimentations est  documenté ici](http://ducamp.me/Xtof/micropub). 
 
