--- a/content/post/2018-09-07-19247.md
+++ b/content/post/2018-09-07-19247.md
@@ -18,7 +18,7 @@ category: social
 
 ## Agenda : 
 
-* Échanges ouverts avec [Glenux]](https://github.com/glenux) sur micropub et perspectives d'usages pour faciliter la publication web.
+* Échanges ouverts avec [Glenux](https://github.com/glenux) sur micropub et perspectives d'usages pour faciliter la publication web.
 * Travaux de configuration d&#39;un point de terminaison #micropub sur une motorisation [gohugo.io](https://gohugo.io). 
 * à compléter.
 
