Compte-rendu meeting micropub Glenux

--- a/content/post/2018-09-07-19247.md
+++ b/content/post/2018-09-07-19247.md
@@ -1,35 +1,36 @@
 ---
 layout: posts
 date: '2018-09-07T05:20:47.928Z'
-title: 'Découverte et implémentation #micropub #indieweb avec Glenux.'
+title: 'Compte-rendu réunion #micropub #indieweb avec Glenux.'
 mf-location:
   - 'geo:48.88589,2.35019;u=20'
 tags: [micropub, indieweb]
 slug: '19247'
-mf-photo:
-  - >-
-    https://christopheducamp.com/static/img/2018-09-19247/micropub-rocks-2018-09-07-07-11-40.png
-category: social
+    
 ---
 ## Quand et où 
-
 * Aujourd'hui, vendredi 7 septembre 2018 de 14h00 à 18H00 
-* à la maison (Paris 18) mf-location: 'geo:48.88589,2.35019;u=20'
 
 ## Agenda : 
 
-* Échanges ouverts avec [Glenux](https://github.com/glenux) sur micropub et perspectives d'usages pour faciliter la publication web.
-* Travaux de configuration d&#39;un point de terminaison #micropub sur une motorisation [gohugo.io](https://gohugo.io). 
-* à compléter.
-
-L'ordre du jour reste ouvert à toutes propositions de recherche d'usages d'interfaces de publication basées sur l'API ouverte standard [micropub](https://indieweb.org/Micropub). 
-
-
-## Comment participer 
-
-Pour participer, appuyez sur le bouton en-dessous "Améliorez la page" pour m'envoyer une PR ou appelez-moi pour avoir le code de la porte.
+* Briefing [Glenux](https://github.com/glenux) sur micropub et perspectives d'usages pour faciliter la publication web. Enthousiasme.
+* Configuration d'un point de terminaison #micropub sur une motorisation [gohugo.io](https://gohugo.io). à étudier.
+* Parcours-utilisateur et interfaces.
 
 ## Documentation : 
 
-À compléter. Le détail de mes [premières expérimentations est  documenté ici](http://ducamp.me/Xtof/micropub). 
+* [micropub](https://indieweb.org/Micropub) sur indieweb 
+* [Premières expérimentations techniques](http://ducamp.me/Xtof/micropub). 
+
+## Schémas
+
+Sur papier. (Photos à déposer).
+
+## Pour action 
+
+* Repo de travail à enrichir https://github.com/glenux/awesome-micropub - Glenn + xtof + vous ?
+* Glenn étudie les points de terminaison micropub
+* Design thinking UI : description du parcours-utilisateur. - xtof 
+
+
 
