--- a/content/post/2018-09-07-19247.md
+++ b/content/post/2018-09-07-19247.md
@@ -1,21 +1,17 @@
 ---
 layout: posts
 date: '2018-09-07T05:20:47.928Z'
-title: 'Compte-rendu réunion #micropub #indieweb avec Glenux.'
-mf-location:
-  - 'geo:48.88589,2.35019;u=20'
+title: 'Compte-rendu de réunion #micropub #indieweb avec Glenux.'
 tags: [micropub, indieweb]
 slug: '19247'
     
 ---
-## Quand et où 
-* Aujourd'hui, vendredi 7 septembre 2018 de 14h00 à 18H00 
 
-## Agenda : 
+## Agenda 
 
-* Briefing [Glenux](https://github.com/glenux) sur micropub et perspectives d'usages pour faciliter la publication web. Enthousiasme.
-* Configuration d'un point de terminaison #micropub sur une motorisation [gohugo.io](https://gohugo.io). à étudier.
-* Parcours-utilisateur et interfaces.
+* Briefing [Glenux](https://github.com/glenux) sur [micropubØ(https://indieweb.org/Micropub) sur les perspectives d'usages pour faciliter la publication web. > ''Enthousiasme''.
+* Configuration d'un point de terminaison #micropub sur une motorisation [gohugo.io](https://gohugo.io). ''à étudier'' par Glenn.
+* Parcours-utilisateur et interfaces. -- ''à écrire''
 
 ## Documentation : 
 
@@ -24,13 +20,10 @@ slug: '19247'
 
 ## Schémas
 
-Sur papier. (Photos à déposer).
+en attente publication instagram
 
 ## Pour action 
 
-* Repo de travail à enrichir https://github.com/glenux/awesome-micropub - Glenn + xtof + vous ?
-* Glenn étudie les points de terminaison micropub
-* Design thinking UI : description du parcours-utilisateur. - xtof 
-
-
-
+* Repo structuré par Glenn https://github.com/glenux/awesome-micropub à enrichir 
+* Étude des points de terminaison micropub micropub. - glenn
+* Design thinking & UI : parcours-utilisateur à rédiger. - xtof 
