lien ébauche schéma sur instagram à finaliser

--- a/content/post/2018-09-07-19247.md
+++ b/content/post/2018-09-07-19247.md
@@ -9,7 +9,7 @@ slug: '19247'
 
 ## Agenda 
 
-* Briefing [Glenux](https://github.com/glenux) sur [micropub](https://indieweb.org/Micropub) sur les perspectives d'usages pour faciliter la publication web. > ''Enthousiasme''.
+* Briefing [Glenux](https://github.com/glenux) sur [micropub](https://indieweb.org/Micropub). Aperçu des usages pour faciliter la publication web. > ''Enthousiasme''.
 * Configuration d'un point de terminaison #micropub sur une motorisation [gohugo.io](https://gohugo.io). ''à étudier'' par Glenn.
 * Parcours-utilisateur et interfaces. -- ''à écrire''
 
@@ -20,7 +20,7 @@ slug: '19247'
 
 ## Schémas
 
-en attente publication instagram
+* [ébauches à finaliser](https://www.instagram.com/p/BnbrYJxgpCH/?taken-by=xtof_fr)
 
 ## Pour action 
 
