--- a/content/post/2018-09-07-61149.md
+++ b/content/post/2018-09-07-61149.md
@@ -3,6 +3,7 @@ layout: posts
 date: '2018-09-07T16:59:09.000Z'
 title: ''
 tags: micropub
+draft: true
 mf-syndication:
   - 'https://www.instagram.com/p/BnbrYJxgpCH/'
 slug: '61149'
