reviewing tag line
+ some small talk [in-reply–to] Chris

--- a/content/post/2018-09-08-14860.md
+++ b/content/post/2018-09-08-14860.md
@@ -5,6 +5,17 @@ title: ''
 mf-in-reply-to:
   - 'https://boffosocko.com/2018/09/07/55727274/'
 slug: '14860'
-category: social
+tags: [micropub, social]
 ---
-Bonjour Chris. Back from holidays. Just testing micropublish.net feature to test a reply. Hope to adapt soon [Micropub-to-github](https://github.com/voxpelli/webpage-micropub-to-github) endpoint  w/ GoHugo.
+Bonjour [Chris](https://boffosocko.com/2018/09/07/55727274/). 
+
+Back from holidays. Testing micropublish.net "reply feature"... 
+
+Hope to adapt soon [Micropub-to-github](https://github.com/voxpelli/webpage-micropub-to-github) endpoint  w/ this GoHugo instance.
+(the YAML's tag line still generates some errors and needs manual edits.)
+
+Work in progress. Really enthousiast on micropub. To be written -I hope- in my 2019 indieweb roadmap :)
+
+Bonne soirée et à bientôt.
+
+![Alt text](https://monosnap.com/image/XAc3YMENJz7NIZJck7rjS7WBKYYaRL.png)
