Add draft: true
Content extracted from ownyourgram : micropub endpoint to be optimized (tag line, URLs...) work to be done on micropub.rocks

--- a/content/post/2018-08-15-61695.md
+++ b/content/post/2018-08-15-61695.md
@@ -2,6 +2,7 @@
 layout: posts
 date: '2018-08-15T17:08:15.000Z'
 title: ''
+draft: true
 mf-location:
   - 'geo:41.9083001119,12.4823299463'
 mf-syndication:
