--- a/content/post/2018-08-16-69936.md
+++ b/content/post/2018-08-16-69936.md
@@ -2,6 +2,7 @@
 layout: posts
 date: '2018-08-16T19:25:36.000Z'
 title: ''
+draft: true
 mf-location:
   - 'geo:41.9168517287,12.4819272473'
 mf-syndication:
