--- a/content/post/2018-08-19-65856.md
+++ b/content/post/2018-08-19-65856.md
@@ -3,6 +3,7 @@ layout: posts
 date: '2018-08-19T18:17:36.000Z'
 title: ''
 tags: corsica
+draft: true
 mf-location:
   - 'geo:41.3833,9.15'
 mf-syndication:
