--- a/content/post/2018-08-24-40871.md
+++ b/content/post/2018-08-24-40871.md
@@ -2,6 +2,7 @@
 layout: posts
 date: '2018-08-24T11:21:11.000Z'
 title: ''
+draft: true
 tags: Picasso
 mf-location:
   - 'geo:43.6116129578,3.8803394002'
