--- a/content/post/2018-08-15-48559.md
+++ b/content/post/2018-08-15-48559.md
@@ -2,6 +2,7 @@
 layout: posts
 date: '2018-08-15T13:29:19.000Z'
 title: ''
+draft: true
 mf-location:
   - 'geo:41.902273,12.454032'
 mf-syndication:
