--- a/content/post/2018-08-24-43219.md
+++ b/content/post/2018-08-24-43219.md
@@ -3,6 +3,7 @@ layout: posts
 date: '2018-08-24T12:00:19.000Z'
 title: ''
 tags: ceramics
+draft: true
 mf-location:
   - 'geo:43.6119,3.8772'
 mf-syndication:
