--- a/content/post/2018-09-07-31157.md
+++ b/content/post/2018-09-07-31157.md
@@ -3,6 +3,7 @@ layout: posts
 date: '2018-09-07T08:39:17.000Z'
 title: ''
 tags: spacepen gtd
+draft: true
 mf-location:
   - 'geo:48.8567,2.3508'
 mf-syndication:
@@ -17,3 +18,5 @@ category: social
 Emballé par mon #spacepen. 
 Todo acheter cartouche Retro51 via @hjertnes
 #gtd
+
+Note de test : extrait de ownyourgram (micropub à paramétrer)
