link to micropublish.net
another micropub/client test

--- a/content/post/2018-09-08-14860.md
+++ b/content/post/2018-09-08-14860.md
@@ -7,14 +7,15 @@ mf-in-reply-to:
 slug: '14860'
 tags: [micropub, social]
 ---
-Bonjour [Chris](https://boffosocko.com/2018/09/07/55727274/). 
+Bonsoir [Chris](https://boffosocko.com/2018/09/07/55727274/). 
 
-Back from holidays. Testing micropublish.net "reply feature"... 
+Back from holidays. Testing [https://micropublish.net](micropublish.net) "reply feature". 
 
-Hope to adapt soon [Micropub-to-github](https://github.com/voxpelli/webpage-micropub-to-github) endpoint  w/ this GoHugo instance.
+Work in progress and I'll try to be helped in France. Hope to adapt the [Micropub-to-github](https://github.com/voxpelli/webpage-micropub-to-github) endpoint on this GoHugo instance. 
+
 (the YAML's tag line still generates some errors and needs manual edits.)
 
-Work in progress. Really enthousiast on micropub. To be written -I hope- in my 2019 indieweb roadmap :)
+Really enthousiast on micropub. To be written -I hope- in my 2019 indieweb roadmap :)
 
 Bonne soirée et à bientôt.
 
